--- a/q/235366.html
+++ b/q/235366.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>014</td><td>Pyt</td><td>240714T010710Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/274153#274153">Kip the </a></td></tr>
-<tr d-ix="1"><td>023</td><td>Uiua</td><td>240713T232605Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/274152#274152">jan</a></td></tr>
-<tr d-ix="2"><td>154</td><td>Pascal FPC</td><td>210919T195348Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/235535#235535">jdt</a></td></tr>
+<tr d-ix="0"><td>147</td><td>Pascal FPC</td><td>210919T195348Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/235535#235535">jdt</a></td></tr>
+<tr d-ix="1"><td>014</td><td>Pyt</td><td>240714T010710Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/274153#274153">Kip the </a></td></tr>
+<tr d-ix="2"><td>023</td><td>Uiua</td><td>240713T232605Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/274152#274152">jan</a></td></tr>
 <tr d-ix="3"><td>030</td><td>Wolfram Language Mathematica</td><td>210916T032325Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/235390#235390">att</a></td></tr>
 <tr d-ix="4"><td>042</td><td>JavaScript Node.js</td><td>240711T234631Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/274105#274105">l4m2</a></td></tr>
 <tr d-ix="5"><td>040</td><td>Octave</td><td>240711T163451Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/274088#274088">int 21h </a></td></tr>
@@ -54,7 +54,15 @@
 <tr d-ix="25"><td>047</td><td>Factor + math.combinatorics</td><td>210915T231621Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/235377#235377">chunes</a></td></tr>
 <tr d-ix="26"><td>006</td><td>Jelly</td><td>210915T200501Z</td><td><a href="https://codegolf.stackexchange.com/questions/235366/is-it-a-row-of-pascals-triangle/235367#235367">caird co</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/mudkip201/pyt" rel="nofollow noreferrer">Pyt</a>, 14 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.freepascal.org/" rel="nofollow noreferrer">Pascal (FPC)</a>, <s>165</s> 147 bytes</h1>
+
+<pre class="lang-pascal prettyprint-override"><code>function f(a:array of word):word;var n,i,c:word;begin
+n:=high(a)+1;c:=1;f:=1;for i:=1 to n do begin
+if a[i-1]&lt;&gt;c then f:=0;c:=c*(n-i)div i;end;end;
+</code></pre>
+<p><a href="https://tio.run/##NU7LDoIwELzzFXNsFYg16qEVf4RwqIXCJqYlFSF@fS0QDzPZ3ew8Rv02@lXY0cRoP85M5B0s01KHoL/wFosPLZcrq1kHuJxys6/PrieXOVkN1A9M86NQRlZC2Y18AKUBk4dD67F/k4WuqRDN/WEwDV0Kk9Vp1ZkDcwXxlmaQ6ly7Ia6RwS8SW59alOW1@bdCBSbyS35LOHOV7QkAlkBTxyxLQp7uyaiMPw" rel="nofollow noreferrer" title="Pascal (FPC) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/mudkip201/pyt" rel="nofollow noreferrer">Pyt</a>, 14 bytes</h1>
 <pre><code>ĐŁř⁻ĐŁĐ⑴*⁻⇹ć=Π
 </code></pre>
 <p><a href="https://tio.run/##K6gs@f//yISjjUdnPmrcDWIcmfBo4hYtIOdR@84j7bbnFvz/H22oY6RjHAsA" rel="nofollow noreferrer" title="Pyt – Try It Online">Try it online!</a></p>
@@ -66,19 +74,11 @@
               Π         take product (1 if all true, 0 otherwise); implicit print
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 23 characters</h1>
+<div id="pu2" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 23 characters</h1>
 <pre><code>/×=≡(÷∩/×⊃(+1)-⇡):⊢⇌.°⊏
 </code></pre>
 <p><a href="https://www.uiua.org/pad?src=0_12_0-dev_1__IyAgb29vb3BzISEhISBpdHMganVzdCB0aGUgYmlub21pYWwgY29lZmZpY2llbnQgICAKYSDihpAgw7fiioMoL8OXKzHih6F8L8OXLeKHoSkKQSDihpAgw7fiiKkvw5fiioMoKzEpLeKHoQoKIyBUZXN0IHdoZXRoZXIgaW5wdXQgbGVuZ3RoICsgcmFuZ2UgbGVuIHBhc3NlZCBpbnRvIEEKIyB5aWVsZHMgaW5wdXQKaSDihpAg4omhQTriiqLih4wuwrDiio8KSSDihpAgL8OXPeKJoSjDt-KIqS_Dl-KKgygrMSkt4oehKTriiqLih4wuwrDiio8KSSBbMSA4IDI4IDU2IDcwIDU2IDI4IDggMV0KJCAvw5c94omhKMO34oipL8OX4oqDKCsxKS3ih6EpOuKKouKHjC7CsOKKjwrin5zip7sK" rel="nofollow noreferrer">Try it here!</a><br />
 It's just the binomial coefficient again, though I didn't realize at first.</p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://www.freepascal.org/" rel="nofollow noreferrer">Pascal (FPC)</a>, <s>165</s> 154 bytes</h1>
-
-<pre class="lang-pascal prettyprint-override"><code>function f(a:array of word):word;var n,i,c,r:word;begin
-n:=high(a)+1;c:=1;r:=1;for i:=1 to n do begin
-if a[i-1]&lt;&gt;c then r:=0;c:=c*(n-i)div i;end;f:=r;end;
-</code></pre>
-<p><a href="https://tio.run/##NU5BjsIwELvzCh8TSCuyWvaQUD6COIS0oSOhSTUUKl5fUqo9jGVZ9thDeMRwr9IQ5zk9OY6UGUkFF0TCGzlhytJqt6B/BQEbMtHIKly7G/GGXdPTrVdB76yPrrFeFkhZQIVgzGC0GaubEsKZKns5niLGvmMU937Jxa3iinRLL5DvuPXJNfIl89IseXL4zjrbuj5c/sehgbLm1/yV@9F@s9YAmITGTiVVgrro5VE9fwA" rel="nofollow noreferrer" title="Pascal (FPC) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 30 bytes</h1>
 <pre><code>(i=-1;r=++i&amp;/@#)!#==i!/(i-r)!&amp;
