--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240715T003029Z
+"   /golfscore                                      20240715T003800Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/274161.html">Sorting with a deque                            : 0274161</a>
 <a href="q/273875.html">Segments of a string doubling in length         : 0273875</a>
 <a href="q/235366.html">Is it a row of Pascals triangle?                : 0235366</a>
 <a href="q/273996.html">Is it an option for the ls utility specified in : 0273996</a>
