--- a/q/274161.html
+++ b/q/274161.html
@@ -26,10 +26,41 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>009</td><td>Vyxal</td><td>240715T005148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274163#274163">emanresu</a></td></tr>
-<tr d-ix="1"><td>008</td><td>Jelly</td><td>240715T003800Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274162#274162">Unrelate</a></td></tr>
+<tr d-ix="0"><td>008</td><td>Jelly</td><td>240715T003800Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274162#274162">Unrelate</a></td></tr>
+<tr d-ix="1"><td>064</td><td>JavaScript Node.js</td><td>240715T010237Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274165#274165">l4m2</a></td></tr>
+<tr d-ix="2"><td>009</td><td>Vyxal</td><td>240715T005148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274163#274163">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 9 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 8 bytes</h1>
+<pre><code>«\ż»\Œpi
+</code></pre>
+<p><a href="https://tio.run/##y0rNyan8///Q6pijew7tjjk6qSDz/@F2zcj//6OjDWN1uKINdRSMdBSMdRRMQDwTMBMoAJEzADLgGCQCUgeWNwWK6CiYIfSYgoXNoDpNwepMwMLGMNIMogRqK8geqJGGUCbcdmQ3IAkguRJiAcQ5prGxAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
+<p>Feels a bit silly, but beats a couple better ideas I've had.</p>
+<pre><code>     Œp     Generate every list built by choosing from, at each position,
+  ż         either
+«\          the cumulative minima
+   »\       or the cumulative maxima.
+       i    Is the input in this list?
+</code></pre>
+<h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 8 bytes</h1>
+<pre><code>n«\×»\o⁼
+</code></pre>
+<p><a href="https://tio.run/##y0rNyan8/z/v0OqYw9MP7Y7Jf9S45//hds3I//@jow1jdbiiDXUUjHQUjHUUTEA8EzATKACRMwAy4BgkAlIHljcFiugomCH0mIKFzaA6TcHqTMDCxjDSDKIEaivIHqiRhlAm3HZkNyAJILkSYgHEOaaxsQA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
+<pre><code>n           Is each element not equal to
+ «\         the smallest element so far?
+   ×        Multiply those comparisons pairwise with
+    »\      the cumulative maxima,
+      o     then replace zeroes with corresponding elements of the input. 
+       ⁼    Is this result equal to the input?
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 64 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>f=([c,...x],...a)=&gt;c?f(x,c,...a)|f(x,...a,c):!a.some(p=&gt;c&gt;(c=p))
+</code></pre>
+<p><a href="https://tio.run/##TU/LDoIwELzzFfW2jbWIUA4aMHwHIaGpFDVACRDCwX/HPiJy2O3M7uzO9s1nPorh1U@nTj2qdZUJ5IJQSpfCZI6TVNwlLEQ4@jHYICLw9cDpqNoKei1KQSQ9xutNqgEypCQqvTwodBB0ISgkKNIkskhz2znrdwtdMCLbZbpAULwNMFuN3RizqshWw1@OncL5GQu3LnBos92Z7/j/OLfb3cEKr6Qtn8QTfHr0a4w9obpRNRVtVA0ZQRKqmTeQYf3vLw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>Raw parse of question</p>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 9 bytes</h1>
 <pre><code>ɖ∵?ɖ∴ZΠ$ḟ
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJBIiwiIiwiyZbiiLU/yZbiiLRazqAk4bifIiwiIiwiWzQsIDMsIDIsIDMsIDIsIDFdXG5bNSwgNCwgNCwgNSwgMywgNSwgMywgNiwgMiwgNl1cbls0LCAzLCA1LCAyLCA2LCAxXVxuWzEwLDEwLDEwLDEwXVxuWzQsIDUsIDQsIDMsIDQsIDVdIl0=" rel="nofollow noreferrer">Try it Online!</a> Port of Unrelated String's Jelly answer, and a bit of a mess. I tried writing my own answer, but it was a byte longer.</p>
@@ -39,16 +70,6 @@
    ɖ∴     # Or a cumulative maximum
   ?       # Of the input?
 </code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 8 bytes</h1>
-<pre><code>«\ż»\Œpi
-</code></pre>
-<p><a href="https://tio.run/##y0rNyan8///Q6pijew7tjjk6qSDz/@F2zcj//6OjDWN1uKINdRSMdBSMdRRMQDwTMBMoAJEzADLgGCQCUgeWNwWK6CiYIfSYgoXNoDpNwepMwMLGMNIMogRqK8geqJGGUCbcdmQ3IAkguRJiAcQ5prGxAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
-<p>Feels a bit silly, but beats a couple better ideas I've had.</p>
-<h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 8 bytes</h1>
-<pre><code>n«\×»\o⁼
-</code></pre>
-<p><a href="https://tio.run/##y0rNyan8/z/v0OqYw9MP7Y7Jf9S45//hds3I//@jow1jdbiiDXUUjHQUjHUUTEA8EzATKACRMwAy4BgkAlIHljcFiugomCH0mIKFzaA6TcHqTMDCxjDSDKIEaivIHqiRhlAm3HZkNyAJILkSYgHEOaaxsQA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
 </div>
 
 <table id="st">
