--- a/q/274161.html
+++ b/q/274161.html
@@ -26,13 +26,19 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>006</td><td>Nekomata + e</td><td>240715T020807Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274168#274168">alephalp</a></td></tr>
-<tr d-ix="1"><td>007</td><td>Jelly</td><td>240715T015528Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274167#274167">Jonathan</a></td></tr>
-<tr d-ix="2"><td>041</td><td>JavaScript Node.js</td><td>240715T010237Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274165#274165">l4m2</a></td></tr>
-<tr d-ix="3"><td>008</td><td>Jelly</td><td>240715T003800Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274162#274162">Unrelate</a></td></tr>
-<tr d-ix="4"><td>009</td><td>Vyxal</td><td>240715T005148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274163#274163">emanresu</a></td></tr>
+<tr d-ix="0"><td>045</td><td>Python</td><td>240715T021848Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274169#274169">Albert.L</a></td></tr>
+<tr d-ix="1"><td>006</td><td>Nekomata + e</td><td>240715T020807Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274168#274168">alephalp</a></td></tr>
+<tr d-ix="2"><td>007</td><td>Jelly</td><td>240715T015528Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274167#274167">Jonathan</a></td></tr>
+<tr d-ix="3"><td>041</td><td>JavaScript Node.js</td><td>240715T010237Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274165#274165">l4m2</a></td></tr>
+<tr d-ix="4"><td>008</td><td>Jelly</td><td>240715T003800Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274162#274162">Unrelate</a></td></tr>
+<tr d-ix="5"><td>009</td><td>Vyxal</td><td>240715T005148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274163#274163">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-e</code>, 6 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 45 bytes</h1>
+<pre class="lang-python prettyprint-override"><code>f=lambda l:min(l)&lt;l.pop()&lt;max(l)or l and f(l)
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=TU9LDoIwEN1zilm2CRiQTwyBkyCLGmhsUtqGoNGzuCExeg6vwW0cWkQWbee9eW_e9PE29-Gs1fjk5fF1GXhwmAJeStadGgYy74QikhZyZ7QhtOjYDaHuQQJTDXAEi4lwZAUIBdq0ioQ098D0Qg1E6QGF7ZVJIihd9OP0qaLaqyIf9j7EPiQIElshtp0Q3_UgMYtsN0XCh2w1pJbNnC21qsSy8e_OnMLlzRFuXOSqNXYTvsH_5dxst0dau498AQ" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-e</code>, 6 bytes</h1>
 <pre><code>pƆᵗ≤ᵗ≥
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFNtJJurpKOgpJuqlLsgqWlJWm6FusLjrU93Dr9UecSMLl0SXFScjFUbsHNA9GGsVzRhjoKRjoKxjoKJkCOCZgF5INlDIA0HAMFQIrAsqZAAR0FM7gGU7CoGUSbKViVCVjUGEaaQVRA7ANZATHOEMKCW4tkORIf4TiI2RB3mMZCPAIA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -44,7 +50,7 @@ p       Find a prefix of the input
     ᵗ≥  Check that the last is greater than at least one element of the rest
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 7 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 7 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ṢƤtƑ&quot;⁸Ẹ
 </code></pre>
 <p>A monadic Link that accepts a list of integers and yields <code>0</code> if sortable or <code>1</code> if not.</p>
@@ -60,7 +66,7 @@ p       Find a prefix of the input
       Ẹ - any?
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 41 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 41 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>x=&gt;!x.some(p=q=t=&gt;t&lt;x[0]?p&lt;(p=t):q&gt;(q=t))
 </code></pre>
@@ -73,7 +79,7 @@ p       Find a prefix of the input
 <p><a href="https://tio.run/##TU/LDoIwELzzFfW2jbWIUA4aMHwHIaGpFDVACRDCwX/HPiJy2O3M7uzO9s1nPorh1U@nTj2qdZUJ5IJQSpfCZI6TVNwlLEQ4@jHYICLw9cDpqNoKei1KQSQ9xutNqgEypCQqvTwodBB0ISgkKNIkskhz2znrdwtdMCLbZbpAULwNMFuN3RizqshWw1@OncL5GQu3LnBos92Z7/j/OLfb3cEKr6Qtn8QTfHr0a4w9obpRNRVtVA0ZQRKqmTeQYf3vLw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Raw parse of question</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 8 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 8 bytes</h1>
 <pre><code>«\ż»\Œpi
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8///Q6pijew7tjjk6qSDz/@F2zcj//6OjDWN1uKINdRSMdBSMdRRMQDwTMBMoAJEzADLgGCQCUgeWNwWK6CiYIfSYgoXNoDpNwepMwMLGMNIMogRqK8geqJGGUCbcdmQ3IAkguRJiAcQ5prGxAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -96,7 +102,7 @@ p       Find a prefix of the input
        ⁼    Is this result equal to the input?
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 9 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 9 bytes</h1>
 <pre><code>ɖ∵?ɖ∴ZΠ$ḟ
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJBIiwiIiwiyZbiiLU/yZbiiLRazqAk4bifIiwiIiwiWzQsIDMsIDIsIDMsIDIsIDFdXG5bNSwgNCwgNCwgNSwgMywgNSwgMywgNiwgMiwgNl1cbls0LCAzLCA1LCAyLCA2LCAxXVxuWzEwLDEwLDEwLDEwXVxuWzQsIDUsIDQsIDMsIDQsIDVdIl0=" rel="nofollow noreferrer">Try it Online!</a> Port of Unrelated String's Jelly answer, and a bit of a mess. I tried writing my own answer, but it was a byte longer.</p>
