--- a/q/274161.html
+++ b/q/274161.html
@@ -26,23 +26,46 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>040</td><td>JavaScript ES6</td><td>240715T072756Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274171#274171">Arnauld</a></td></tr>
-<tr d-ix="1"><td>030</td><td>R</td><td>240715T062626Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274170#274170">pajonk</a></td></tr>
-<tr d-ix="2"><td>006</td><td>Jelly</td><td>240715T015528Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274167#274167">Jonathan</a></td></tr>
-<tr d-ix="3"><td>045</td><td>Python</td><td>240715T021848Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274169#274169">Albert.L</a></td></tr>
-<tr d-ix="4"><td>006</td><td>Nekomata + e</td><td>240715T020807Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274168#274168">alephalp</a></td></tr>
-<tr d-ix="5"><td>041</td><td>JavaScript Node.js</td><td>240715T010237Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274165#274165">l4m2</a></td></tr>
-<tr d-ix="6"><td>008</td><td>Jelly</td><td>240715T003800Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274162#274162">Unrelate</a></td></tr>
-<tr d-ix="7"><td>009</td><td>Vyxal</td><td>240715T005148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274163#274163">emanresu</a></td></tr>
+<tr d-ix="0"><td>016</td><td>Charcoal</td><td>240715T074624Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274172#274172">Neil</a></td></tr>
+<tr d-ix="1"><td>040</td><td>JavaScript ES6</td><td>240715T072756Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274171#274171">Arnauld</a></td></tr>
+<tr d-ix="2"><td>030</td><td>R</td><td>240715T062626Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274170#274170">pajonk</a></td></tr>
+<tr d-ix="3"><td>006</td><td>Jelly</td><td>240715T015528Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274167#274167">Jonathan</a></td></tr>
+<tr d-ix="4"><td>045</td><td>Python</td><td>240715T021848Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274169#274169">Albert.L</a></td></tr>
+<tr d-ix="5"><td>006</td><td>Nekomata + e</td><td>240715T020807Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274168#274168">alephalp</a></td></tr>
+<tr d-ix="6"><td>041</td><td>JavaScript Node.js</td><td>240715T010237Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274165#274165">l4m2</a></td></tr>
+<tr d-ix="7"><td>008</td><td>Jelly</td><td>240715T003800Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274162#274162">Unrelate</a></td></tr>
+<tr d-ix="8"><td>009</td><td>Vyxal</td><td>240715T005148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274163#274163">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 40 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 16 bytes</h1>
+<pre><code>⬤θ№⟦⌊…θ⊕κ⌈…θ⊕κ⟧ι
+</code></pre>
+<p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMMxJ0ejUEfBOb8UyIn2zczLzC3N1XCuTM5Jdc7ILwDJeeYlF6XmpuaVpKZoZGtqauoo@CZWEFYWq6OQCaSs//@PjjbVUTABIyDDGEaa6SgYAcnY2P@6ZTkA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs a Charcoal boolean, i.e. <code>-</code> if the deque can be sorted, nothing if not. Explanation: Port of JonathanAllan's Jelly answer.</p>
+<pre><code> θ                  Input array
+⬤                   All elements satisfy
+      θ             Input array
+     …              Truncated to length
+        κ           Current index
+       ⊕            Incremented
+    ⌊               Minimum so far
+           θ        Input array
+          …         Truncated to length
+             κ      Current index
+            ⊕       Incremented
+         ⌈          Maximum so far
+   ⟦          ⟧     Make into list
+  №                 Contains
+               ι    Current element
+                    Implicitly print
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 40 bytes</h1>
 <p>Returns a Boolean value.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>a=&gt;a.every(m=v=&gt;(v&gt;a?0:a=v)|(v&lt;m?0:m=v))
 </code></pre>
 <p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/Z9m@z/R1i5RL7UstahSI9e2zNZOo8wu0d7AKtG2TLNGo8wmF8gGimtq/k/OzyvOz0nVy8lP11CKDikqLcmojFXStOZClkjTiDaM1cQiqKNgpKNgrKNggk3WBCwFVIBdrwFQAo6xqQCZC9ZvClSho2CG2w5TsDIzHDaZgs0xASszhpFmEC1g9SgalGLyot0Sc4qxhwLESzhca4hDCh4Q@IIDSQGeAIX4BRIypiA1/wE" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 30 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 30 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(x,`!`=cummin)any(x-!x&amp;x+!-x)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhb7YjQqdBIUE2yTS3NzM_M0E_MqNSp0FSvUKrQVdSs0IYpu_lcKCQp1VeJK00jWMNTUhNA6CkY6CsY6CiZQARMwDygGV2EAZMMxVBCkAazKFCioo2CGotkULGOGMMIUrNoELGMMI80gqoBKlNwcfYJh7oJYj7DGEMGDOw3NgUhiqB6B2Atxq6kmNBgWLIDQAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -52,7 +75,7 @@
 <pre class="lang-r prettyprint-override"><code>\(x)any(x-cummin(x)&amp;(-x)-cummin(-x))
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 7 </s> 6 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 7 </s> 6 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ṢƤtƑ&quot;ḋ
 </code></pre>
 <p>A monadic Link that accepts a list of positive integers and yields <code>0</code> (falsey) if sortable or a positive integer (truthy) if not.</p>
@@ -68,13 +91,13 @@
      ḋ - dot-product with {A}
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 45 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 45 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>f=lambda l:min(l)&lt;l.pop()&lt;max(l)or l and f(l)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=TU9LDoIwEN1zilm2CRiQTwyBkyCLGmhsUtqGoNGzuCExeg6vwW0cWkQWbee9eW_e9PE29-Gs1fjk5fF1GXhwmAJeStadGgYy74QikhZyZ7QhtOjYDaHuQQJTDXAEi4lwZAUIBdq0ioQ098D0Qg1E6QGF7ZVJIihd9OP0qaLaqyIf9j7EPiQIElshtp0Q3_UgMYtsN0XCh2w1pJbNnC21qsSy8e_OnMLlzRFuXOSqNXYTvsH_5dxst0dau498AQ" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Returns flipped truth values: False for sortable and True for not sortable. Consumes the input list.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-e</code>, 6 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-e</code>, 6 bytes</h1>
 <pre><code>pƆᵗ≤ᵗ≥
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFNtJJurpKOgpJuqlLsgqWlJWm6FusLjrU93Dr9UecSMLl0SXFScjFUbsHNA9GGsVzRhjoKRjoKxjoKJkCOCZgF5INlDIA0HAMFQIrAsqZAAR0FM7gGU7CoGUSbKViVCVjUGEaaQVRA7ANZATHOEMKCW4tkORIf4TiI2RB3mMZCPAIA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -86,7 +109,7 @@ p       Find a prefix of the input
     ᵗ≥  Check that the last is greater than at least one element of the rest
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 41 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 41 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>x=&gt;!x.some(p=q=t=&gt;t&lt;x[0]?p&lt;(p=t):q&gt;(q=t))
 </code></pre>
@@ -99,7 +122,7 @@ p       Find a prefix of the input
 <p><a href="https://tio.run/##TU/LDoIwELzzFfW2jbWIUA4aMHwHIaGpFDVACRDCwX/HPiJy2O3M7uzO9s1nPorh1U@nTj2qdZUJ5IJQSpfCZI6TVNwlLEQ4@jHYICLw9cDpqNoKei1KQSQ9xutNqgEypCQqvTwodBB0ISgkKNIkskhz2znrdwtdMCLbZbpAULwNMFuN3RizqshWw1@OncL5GQu3LnBos92Z7/j/OLfb3cEKr6Qtn8QTfHr0a4w9obpRNRVtVA0ZQRKqmTeQYf3vLw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Raw parse of question</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 8 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 8 bytes</h1>
 <pre><code>«\ż»\Œpi
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8///Q6pijew7tjjk6qSDz/@F2zcj//6OjDWN1uKINdRSMdBSMdRRMQDwTMBMoAJEzADLgGCQCUgeWNwWK6CiYIfSYgoXNoDpNwepMwMLGMNIMogRqK8geqJGGUCbcdmQ3IAkguRJiAcQ5prGxAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -122,7 +145,7 @@ p       Find a prefix of the input
        ⁼    Is this result equal to the input?
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 9 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 9 bytes</h1>
 <pre><code>ɖ∵?ɖ∴ZΠ$ḟ
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJBIiwiIiwiyZbiiLU/yZbiiLRazqAk4bifIiwiIiwiWzQsIDMsIDIsIDMsIDIsIDFdXG5bNSwgNCwgNCwgNSwgMywgNSwgMywgNiwgMiwgNl1cbls0LCAzLCA1LCAyLCA2LCAxXVxuWzEwLDEwLDEwLDEwXVxuWzQsIDUsIDQsIDMsIDQsIDVdIl0=" rel="nofollow noreferrer">Try it Online!</a> Port of Unrelated String's Jelly answer, and a bit of a mess. I tried writing my own answer, but it was a byte longer.</p>
