--- a/q/171018.html
+++ b/q/171018.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>074</td><td>Bash</td><td>240712T153832Z</td><td><a href="https://codegolf.stackexchange.com/questions/171018/compare-version-numbers/274133#274133">Themooni</a></td></tr>
+<tr d-ix="0"><td>128</td><td>Bash</td><td>240712T153832Z</td><td><a href="https://codegolf.stackexchange.com/questions/171018/compare-version-numbers/274133#274133">Themooni</a></td></tr>
 <tr d-ix="1"><td>012</td><td>05AB1E legacy</td><td>180822T073359Z</td><td><a href="https://codegolf.stackexchange.com/questions/171018/compare-version-numbers/171024#171024">Kevin Cr</a></td></tr>
 <tr d-ix="2"><td>041</td><td>Perl 5 + pa</td><td>240712T115036Z</td><td><a href="https://codegolf.stackexchange.com/questions/171018/compare-version-numbers/274127#274127">Dom Hast</a></td></tr>
 <tr d-ix="3"><td>064</td><td>JavaScript Node.js</td><td>240709T082501Z</td><td><a href="https://codegolf.stackexchange.com/questions/171018/compare-version-numbers/274039#274039">l4m2</a></td></tr>
@@ -55,14 +55,26 @@
 <tr d-ix="26"><td>076</td><td>Python 2</td><td>180822T065251Z</td><td><a href="https://codegolf.stackexchange.com/questions/171018/compare-version-numbers/171022#171022">TFeld</a></td></tr>
 <tr d-ix="27"><td>087</td><td>Python 2</td><td>180822T061045Z</td><td><a href="https://codegolf.stackexchange.com/questions/171018/compare-version-numbers/171021#171021">Chas Bro</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, non-competing 74 bytes</h1>
-<pre class="lang-bash prettyprint-override"><code>e=$1$'\n'$2
-sort -sCV&lt;&lt;&lt;$e$'\n'$1&amp;&amp;echo e||(sort -CV&lt;&lt;&lt;$e&amp;&amp;echo l||echo g)
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 128 bytes</h1>
+<pre class="lang-bash prettyprint-override"><code>c='grep -Po .*[1-9]0?(?=\.?)'
+u=`$c&lt;&lt;&lt;$1`
+v=`$c&lt;&lt;&lt;$2`
+e=$u$'\n'$v
+sort -sCV&lt;&lt;&lt;$e$'\n'$u&amp;&amp;echo e||(sort -CV&lt;&lt;&lt;$e&amp;&amp;echo l||echo g)
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=lVJPT9swHBW74Y-w048sa5JDLdsKa8KaCYR2GBekHbiUCnWtA2hVUyWpNKmpxPfg0gPsO40jn4Sf_6UtiMOixH72-73nZzv3D79G1c366UMwkePpqJTQPYFaVvXVeFTJLCSDQIB7uAPBMLtGhlNG2RtGGsZpXE3LCBoLwyDi226cHn7pJalmnGZqGObcxKsEomX44Y4moSw2TELj7Ww9yqxdjyZv90NVdvyYeoV1MyOGaZmpaTV2BIrhrZvSxMIdQry1H6VJ05TihxMWUW41gqncCTpZtMm2uQVqM7Sn4zLt3k9EyLy8ndU5BA187nLGKjBgpxfYXs4CCH7M5osa-5-yWkwV-P5nLse1nCA8_x0QQvIwCh8Xdd5N_p3JzOd-gEJfkKooa-hWpxf9ft-XZpZ3OnJ8U4BsmtDwlrbz06bR_XVkHJ_2PmLgvCjhVuXAFjx_edD-ioPj4cr7CpOC7Jc6YOb5YQ6-ro48orb9P9tFNYQh-MtP2mEF3zJADUQRdDqgo-H6mjs6StPV891fD5rGMZrwIPIQmzwKLTdxTQVm1isNBlt1WfZe6XDYLq6OHO3JpJhJYo5ovTb9Cw" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Non competing because i cannot get it to work correctly with 1.0 vs 1.0.0, <code>sort</code> will say 1.0.0 is always greater (instead of for example doing nothing)</p>
+<p><a href="https://ato.pxeger.com/run?1=lVLLjtMwFBXs8CewuoRQJ0ixbCtDk6GmIMSCFYgFm0xES-p0RlRNlccIqak0_8GmC-CfmCVfgh3HacuIBVHie-xzz_Xxdb59_zyvLve39_FCZqt5KSF4BbWs6k_ZvJLCQwnmYB9mAU7FUjGMUELvMNIwVmNzBoaTkBtGIXZcjZGzZ-Mo7hirWRmG2mr8Lwd8YNjZiSYiNDRMRMJjb2NC-3JjEt09D9He1Uf1y_tqZkaVW2pyBk0_A82woZrWhNw2ITw6j9bEcUzUpxZ6RFiv4VT7jlSlHh28HW6B9B6G7lhPp_fjI7Qpr9Z1DriFJwGjtAIDTiJX48UaA3673jS1ih9k1aw0ePN1I7NaLhR89wUjhHLP9340dR5Ev24ygZel3EDwvgDyNGFBnNKpNxUXZOpj1IiZm00mE5fN0LXFfIakcBsXq-3ca1QVZQ1B9fqj5qRZbUYjmV0WINvWM3xP9-urtu3i0jc-bu89VMfMixKutHs1guNuHw0_cPIy3TnPYVGgB2V3LOG4Xg5ul-07SDfrf5qk1OB54G4fdxV28EKA0oDvw2gEnTW1f8edn8fx7vfNTwfa1jId4YDvKGz8aLQ92DUZynO3U5Ic5Qnxr9Q0HTbXF6XKo0Wxlsi0aL838Q8" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>uses GNU <code>sort</code> which can sort version numbers using the -V flag.</p>
-<p>I might come back around to fix this once i have enough brainpower to wrangle <code>sed</code> syntax to strip trailing <code>.0</code>s (contributions welcome)</p>
+<p>explanation:</p>
+<pre class="lang-bash prettyprint-override"><code>c='                         ' # the grep command will run twice, so we alias it
+   grep -Po .*[1-9]0?(?=\.?)  # this regex matches everything until the first dot before any eventual trailing .0's (fixes 1.1.0 &gt; 1.1)
+u=`$c&lt;&lt;&lt;$1`                   # apply the filter to both arguments
+v=`$c&lt;&lt;&lt;$2`
+e=$u$'\n'$v                   #we are going to use GNU sort to test version numbers, so we build a &quot;file&quot; that can be sorted
+sort -sCV&lt;&lt;&lt;$e$'\n'$u         #test if versions $1 &gt; $2 &gt; $1, testing for equality. -s allows 1.01 == 1.1
+                     &amp;&amp;echo e||(                             ) #print e and exit if equal
+                                sort -CV&lt;&lt;&lt;$e # -C: test if already sorted, -V, sort with version numbers
+                                             &amp;&amp;echo l||echo g #print output accordingly
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E (legacy)</a>, <s>15</s> <s>14</s> <s>13</s> 12 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>'.¡0ζø`.S0Kн
