--- a/q/274161.html
+++ b/q/274161.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>040</td><td>JavaScript ES6</td><td>240715T072756Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274171#274171">Arnauld</a></td></tr>
-<tr d-ix="1"><td>017</td><td>K ngn/k</td><td>240715T083943Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274175#274175">akamayu</a></td></tr>
+<tr d-ix="0"><td>017</td><td>K ngn/k</td><td>240715T083943Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274175#274175">akamayu</a></td></tr>
+<tr d-ix="1"><td>040</td><td>JavaScript ES6</td><td>240715T072756Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274171#274171">Arnauld</a></td></tr>
 <tr d-ix="2"><td>010</td><td>05AB1E</td><td>240715T075322Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274173#274173">Kevin Cr</a></td></tr>
 <tr d-ix="3"><td>016</td><td>Charcoal</td><td>240715T074624Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274172#274172">Neil</a></td></tr>
 <tr d-ix="4"><td>030</td><td>R</td><td>240715T062626Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274170#274170">pajonk</a></td></tr>
@@ -38,7 +38,18 @@
 <tr d-ix="9"><td>008</td><td>Jelly</td><td>240715T003800Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274162#274162">Unrelate</a></td></tr>
 <tr d-ix="10"><td>009</td><td>Vyxal</td><td>240715T005148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274163#274163">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 40 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 17 bytes</h1>
+<pre><code>{&amp;/(x=|\x)|x=&amp;\x}
+</code></pre>
+<p>Every element must be the minimal (or the maximal) element of its prefix.</p>
+<p><a href="https://ngn.codeberg.page/k#eJxLs6pW09eosK2JqdCsqbBVi6mo5eJKczAEYQUjBWMFEyDLBEgbKYDFDBRgCMgDygLFTRUMFcygqkyBfDOwSlOgnAmQbwzGZiBxrgQDKyVdIFACmw40E2yGIZiG2AG3B8qG2Q8yDWSbKQAHgiLm" rel="nofollow noreferrer">Try it online!</a></p>
+<h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>13 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<p>A direct translation of the ngn/k solution.</p>
+<pre><code>(⊢=⌈⍀)∧.∨⊢=⌊⍀
+</code></pre>
+<p><a href="https://razetime.github.io/APLgolf/?h=AwA&amp;c=03jUtcj2UU/Ho94GzUcdy/UedayAiHQBRQA&amp;f=S1Mw5EpTMFQwUjBWMAGyTIC0EUTMAI6APKAsUNwUqNIMqsoUyDcDqzQF8k2ApDEYm4HEubge9U191DbB0OBR7xZ1XXUusCVAo8FGGYJpiFVw66BsmDNMwfJAmgsA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 40 bytes</h1>
 <p>Returns a Boolean value.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>a=&gt;a.every(m=v=&gt;(v&gt;a?0:a=v)|(v&lt;m?0:m=v))
@@ -57,12 +68,6 @@ a.every(m =       // m = upper bound, initially NaN'ish
                   //      has been updated, meaning v is in between
 )                 // end of every()
 </code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 17 bytes</h1>
-<pre><code>{&amp;/(x=|\x)|x=&amp;\x}
-</code></pre>
-<p>Every element must be the minimal (or the maximal) element of its prefix.</p>
-<p><a href="https://ngn.codeberg.page/k#eJxLs6pW09eosK2JqdCsqbBVi6mo5eJKczAEYQUjBWMFEyDLBEgbKYDFDBRgCMgDygLFTRUMFcygqkyBfDOwSlOgnAmQbwzGZiBxrgQDKyVdIFACmw40E2yGIZiG2AG3B8qG2Q8yDWSbKQAHgiLm" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>11</s> 10 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ηε{DyθÚÊ}P
