--- a/q/82526.html
+++ b/q/82526.html
@@ -65,9 +65,16 @@
 <tr d-ix="36"><td>018</td><td>Pyth</td><td>160610T002020Z</td><td><a href="https://codegolf.stackexchange.com/questions/82526/sum-it-up-with-a-digital-triangle/82527#82527">Maltysen</a></td></tr>
 </table>
 <div id="pu0" class="pu"><h1>Uiua, 29 bytes</h1>
-<pre><code>∧(◿10≡/+◫2&amp;p⊂:/$&quot;_ _&quot;,↯:@ )°⊏
+<pre><code>∧(◿10≡/+◫2&amp;p⊂↯:@ ⊙⊸/$&quot;_ _&quot;)°⊏
 </code></pre>
-<p><a href="https://uiua.org/pad?src=0_12_0-dev_1__RiDihpAg4oinKOKXvzEw4omhLyvil6syJnDiioI6LyQiXyBfIizihq86QCApwrDiio8KCuKXjEYgN181XzBfOQril4xGIDFfMl8zXzQK" rel="nofollow noreferrer">Try it</a></p>
+<p><a href="https://uiua.org/pad?src=0_12_0-dev_1__RiDihpAg4oinKOKXvzEw4omhLyvil6syJnDiioLihq86QCDiipniirgvJCJfIF8iKcKw4oqPCgril4xGIDdfNV8wXzkK4peMRiAxXzJfM180Cg==" rel="nofollow noreferrer">Try it</a></p>
+<pre><code>°⊏          # range of 0 to the input's length
+∧(          # fold N, with the input as the initial value:
+  ⊙⊸/$&quot;_ _&quot; #   join the value on spaces
+  &amp;p⊂↯:@    #   prepend N spaces and print with newline
+  ◿10≡/+◫2  #   next value: sums of pairwise windows mod 10
+)
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 91 bytes</h1>
 
