--- a/q/274161.html
+++ b/q/274161.html
@@ -45,9 +45,9 @@
 <div id="pu0" class="pu"><h1>JavaScript (ES6), 39 bytes</h1>
 <p>Returns a Boolean value.</p>
 
-<pre class="lang-javascript prettyprint-override"><code>a=&gt;a.every(m=v=&gt;(v&gt;a?v:a=v)&lt;m?v==a:m=v)
+<pre class="lang-javascript prettyprint-override"><code>a=&gt;a.every(m=v=&gt;(v&gt;a?v:a=v)&lt;m?a==v:m=v)
 </code></pre>
-<p><a href="https://tio.run/##fZC7DoMgGIX3PgVxgoSaWsXBFt36BN2sA7H2FpVGLYlPTxFSYxNwgOE/3/kv58UE68vu@R62Lb9W8kYloynzK1F1I2yooCkUKctEwqhAxyYTlLJE1ZEsedvzuvJrfodefu4@w2MsPHTYLIUbzIMCWYoY7DEIMYhsaqQlBdi9OyXMz0ZMfbWfKAKD2D2DaCx2TCK6T6Sx8PfHxqL5P4N3afMTq3t7CuYkx7aBQ5qDWItjAawEam4xyZCJkV8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##fZC7DoMgGIX3PgVxgoSaWsXBFt36BN2sA7H2FpVGLYlPTxFSYxNwgOE/3/kv58UE68vu@R62Lb9W8kYloynzK1F1I2yooCkUKctEwqhAxyZjlIpE1ZEsedvzuvJrfodefu4@w2MsPHTYLIUbzIMCWYoY7DEIMYhsaqQlBdi9OyXMz0ZMfbWfKAKD2D2DaCx2TCK6T6Sx8PfHxqL5P4N3afMTq3t7CuYkx7aBQ5qDWItjAawEam4xyZCJkV8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <h3>Commented</h3>
 <pre class="lang-javascript prettyprint-override"><code>a =&gt;        // a[] = input array, re-used as the lower bound
 a.every(m = // m = upper bound, initially NaN'ish
