--- a/q/82526.html
+++ b/q/82526.html
@@ -69,11 +69,11 @@
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_12_0-dev_1__RiDihpAg4oinKOKXvzEw4omhLyvil6syJnDiioLihq86QCDiipniirgvJCJfIF8iKcKw4oqPCgril4xGIDdfNV8wXzkK4peMRiAxXzJfM180Cg==" rel="nofollow noreferrer">Try it</a></p>
 <pre><code>°⊏          # range of 0 to the input's length
-∧(          # fold N, with the input as the initial value:
-  ⊙⊸/$&quot;_ _&quot; #   join the value on spaces
-  &amp;p⊂↯:@    #   prepend N spaces and print with newline
-  ◿10≡/+◫2  #   next value: sums of pairwise windows mod 10
-)
+∧(          # fold over this (N), with the input as the initial value:
+  ⊙⊸/$&quot;_ _&quot; #   to the value, without consuming it: join on spaces
+  &amp;p⊂↯:@    #   prepend N spaces to this string and print it
+  ◿10≡/+◫2  #   take the sums of pairwise windows, mod 10;
+)           #     this is the next value for the loop
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 91 bytes</h1>
